# super-tanks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SYSTEM_CARD.md  docker-compose.yml  funding.json  install.sh  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yml
.github/workflows/: tests.yml
config/: family_config.template.yaml  users.template.json
core/: ask_admin.py  bootstrap.py  gateway.py  go_gate_approval_daemon.py  soul_guard.py  zeph_quarantine.py  zeph_quarantine_ast.py
core/a2a/: escalation_rules.py
core/council/: README.md  __init__.py  cli.py  council.py  synthesizer.py
core/db/: connection.py
core/diq/: diq_a2a.py  diq_cloud.py  diq_ha.py  diq_integrity.py  diq_memory.py  diq_registry.py  diq_skills.py  diq_tools.py  diq_voice.py
core/memory/: access_control.py  audit_log.py  hierarchical_store.py  hybrid_search.py  secure_store.py  shadow_store.py  tripwires.py
core/security/: aeris_response_templates.py  aeris_security_directives.py  agent_identity.py  audit_chain.py  audit_key.py  audit_sanitizer.py  cody_directives.py  cody_response_templates.py  dep_upgrade_apply.py  dispatch_audit.py  fix_proposals.py  integrity_floor.py  night_queue.py  super_tanks_mode.py  threat_brief.py  threat_intel.py  threat_monitor.py  token_budget.py  tool_allowlists.py  trust_score.py  user_manager.py  zef_injection_filter.py  zef_llm_classifier.py  zeph_response_templates.py
core/voice/: room_router.py  voice_pipeline.py  voice_profiles.py  voice_security.py
core/zeph/: proactive_monitor.py  self_diagnostic.py
dashboard-static/: onboarding.html
docs/: ACS_MAPPING.md  CODY_HANDOVER.md  CODY_ONBOARDING.md  COMPLIANCE_NIST.md  INCIDENT_RESPONSE.md  RISK_REGISTER.md  voice-security.md
installer/macos/: install-macos.sh
installer/windows/: setup.iss  start.bat  stop.bat
scripts/: apply_proposed_fix.py  demo_go_gate.py  diagnose_smarthome.py  independent_review.py  install_voice.sh  rotate_audit_chain_key.py  seal_souls.py  threat_scan.py  verify_frozen.py  voice_discover.py  voice_runner.py  zef_baseline.py
tests/: conftest.py
tests/test_a2a/: test_escalation_rules.py
tests/test_core/: test_ask_admin.py  test_bootstrap.py  test_gateway.py  test_go_gate_approval_daemon.py  test_zeph_quarantine.py  test_zeph_quarantine_ast.py
tests/test_db/: test_connection.py
tests/test_diq/: test_diq_contracts.py  test_diq_integrity.py  test_diq_registry.py  (+1 more)
(+64 files in other folders)
